# kv-knowledge-packs

./: README.md  pyproject.toml
benchmarks/: exp108_dual_channel.py  exp90_multifact_reasoning.py  exp90b_kv_vs_rag_reasoning.py  exp91_memory_tool_demo.py  exp92_hotpotqa.py  exp93_kv_composition.py  exp93b_kv_composition.py  simpleqa_bench.py  simpleqa_benchmark.py  simpleqa_bge_m3.py  simpleqa_kv_bge.py
docs/: mechanism_reference.md
examples/: quickstart.py
kvpack/: __init__.py  core.py  memory_tool.py  router.py
paper/: gen_figures.py  main.tex  neurips_2024.sty  references.bib
paper/figures/: gen_dual_channel_alpha.py
tests/: test_router.py
